SAK-21008
git-svn-id: https://source.sakaiproject.org/svn/edu-services/trunk@96909 66ffb92e-73f9-0310-93c1-f5514f145a0a